--- a/Webserver/views/header.ejs
+++ b/Webserver/views/header.ejs
@@ -26,7 +26,7 @@
                             <a href="#"><img src="../Images/search.jpg" alt="no image" height="25" width="25"></a>
                         </span>
                     </div>
-                    <div class="ex2">
+                    <div id="ex2" class="ex2">
                       <table id="exc">
                         <!-- <tr><td class="searchPro"><a href="#">Search Product 1</a></td></tr> -->
                       </table>
