--- a/Webserver/views/sidebar.ejs
+++ b/Webserver/views/sidebar.ejs
@@ -24,14 +24,14 @@
                 <input type="submit" value="clear" class="common" id="bt" onclick="uncheckAllDiv1()">
             </div>
             <div class="sideleft11" id="sideleft11">
-                    <input type="checkbox" class="common" name="price" value="0-25000">&nbsp;&nbsp;Below Rs. 25,000<br>
-                    <input type="checkbox" class="common" name="price" value="25000-30000">&nbsp;&nbsp;Rs. 25,000 - Rs. 30,000<br>
-                    <input type="checkbox" class="common" name="price" value="30000-40000">&nbsp;&nbsp;Rs. 30,000 - Rs. 40,000<br>
-                    <input type="checkbox" class="common" name="price" value="40000-50000">&nbsp;&nbsp;Rs. 40,000 - Rs. 50,000<br>
-                    <input type="checkbox" class="common" name="price" value="50000-70000">&nbsp;&nbsp;Rs. 50,000 - Rs. 70,000<br>
-                    <input type="checkbox" class="common" name="price" value="70000-100000">&nbsp;&nbsp;Rs. 70,000 - Rs. 100,000<br>
-                    <input type="checkbox" class="common" name="price" value="100000-120000">&nbsp;&nbsp;Rs. 100,000 - Rs. 120,000<br>
-                    <input type="checkbox" class="common" name="price" value="120000-1000000">&nbsp;&nbsp;Above Rs. 70,000<br>
+                    <input type="checkbox" class="common" name="price" value="1">&nbsp;&nbsp;Below Rs. 25,000<br>
+                    <input type="checkbox" class="common" name="price" value="2">&nbsp;&nbsp;Rs. 25,000 - Rs. 30,000<br>
+                    <input type="checkbox" class="common" name="price" value="3">&nbsp;&nbsp;Rs. 30,000 - Rs. 40,000<br>
+                    <input type="checkbox" class="common" name="price" value="4">&nbsp;&nbsp;Rs. 40,000 - Rs. 50,000<br>
+                    <input type="checkbox" class="common" name="price" value="5">&nbsp;&nbsp;Rs. 50,000 - Rs. 70,000<br>
+                    <input type="checkbox" class="common" name="price" value="6">&nbsp;&nbsp;Rs. 70,000 - Rs. 100,000<br>
+                    <input type="checkbox" class="common" name="price" value="7">&nbsp;&nbsp;Rs. 100,000 - Rs. 120,000<br>
+                    <input type="checkbox" class="common" name="price" value="8">&nbsp;&nbsp;Above Rs. 70,000<br>
             </div>
 
             <div style="height:2px"></div>
@@ -69,12 +69,12 @@
             </div>
             <div class="sideleft14" id="sideleft14">
                     <input type="checkbox" class="common" name="screen" value="Yes">&nbsp;&nbsp;Touch Screen<br>
-                    <input type="checkbox" class="common" name="screen" value="0-12">&nbsp;&nbsp;12 inch & Below<br>
-                    <input type="checkbox" class="common" name="screen" value="12-13">&nbsp;&nbsp;12 inch - 13 inch<br>
-                    <input type="checkbox" class="common" name="screen" value="13-14">&nbsp;&nbsp;13 inch - 14 inch<br>
-                    <input type="checkbox" class="common" name="screen" value="14-15">&nbsp;&nbsp;14 inch - 15 inch<br>
-                    <input type="checkbox" class="common" name="screen" value="15-16">&nbsp;&nbsp;15 inch - 16 inch<br>
-                    <input type="checkbox" class="common" name="screen" value="16-100">&nbsp;&nbsp;16 inch & Above<br>
+                    <input type="checkbox" class="common" name="screen" value="1">&nbsp;&nbsp;12 inch & Below<br>
+                    <input type="checkbox" class="common" name="screen" value="2">&nbsp;&nbsp;12 inch - 13 inch<br>
+                    <input type="checkbox" class="common" name="screen" value="3">&nbsp;&nbsp;13 inch - 14 inch<br>
+                    <input type="checkbox" class="common" name="screen" value="4">&nbsp;&nbsp;14 inch - 15 inch<br>
+                    <input type="checkbox" class="common" name="screen" value="5">&nbsp;&nbsp;15 inch - 16 inch<br>
+                    <input type="checkbox" class="common" name="screen" value="6">&nbsp;&nbsp;16 inch & Above<br>
             </div>
 
             <div style="height:2px"></div>
@@ -103,34 +103,6 @@
                     <input type="checkbox" class="common" name="cpu" value="Intel Core i3">&nbsp;&nbsp;Intel Core i3<br>
                     <input type="checkbox" class="common" name="cpu" value="Intel Core i5">&nbsp;&nbsp;Intel Core i5<br>
                     <input type="checkbox" class="common" name="cpu" value="Intel Core i7">&nbsp;&nbsp;Intel Core i7<br>
-            </div>
-
-            <div style="height:2px"></div>
-
-            <div class="sideleft7">
-                <i class="fa fa-sort-desc" aria-hidden="true" id="cpus" onclick="displayDiv7()"></i>&nbsp;CPU Speed
-                <input type="submit" value="clear" class="common" id="bt7" onclick="uncheckAllDiv7()">
-            </div>
-            <div class="sideleft17" id="sideleft17">
-                    <input type="checkbox" class="common" name="cpug" value="1.5">&nbsp;&nbsp;1.5 GHz & Above<br>
-                    <input type="checkbox" class="common" name="cpug" value="2.0">&nbsp;&nbsp;2 GHz & Above<br>
-                    <input type="checkbox" class="common" name="cpug" value="2.5">&nbsp;&nbsp;2.5 Ghz & Above<br>
-                    <input type="checkbox" class="common" name="cpug" value="3.0">&nbsp;&nbsp;3 GHz & Above<br>
-            </div>
-
-            <div style="height:2px"></div>
-
-            <div class="sideleft8">
-                <i class="fa fa-sort-desc" aria-hidden="true" id="cpug" onclick="displayDiv8()"></i>&nbsp;CPU Generation
-                <input type="submit" value="clear" class="common" id="bt8" onclick="uncheckAllDiv8()">
-            </div>
-            <div class="sideleft18" id="sideleft18">
-                    <input type="checkbox" class="common" name="cpus" value="3rd Gen">&nbsp;&nbsp;Intel 3rd Gen<br>
-                    <input type="checkbox" class="common" name="cpus" value="4th Gen">&nbsp;&nbsp;Intel 4th Gen<br>
-                    <input type="checkbox" class="common" name="cpus" value="5th Gen">&nbsp;&nbsp;Intel 5th Gen<br>
-                    <input type="checkbox" class="common" name="cpus" value="6th Gen">&nbsp;&nbsp;Intel 6th Gen<br>
-                    <input type="checkbox" class="common" name="cpus" value="7th Gen">&nbsp;&nbsp;Intel 7th Gen<br>
-                    <input type="checkbox" class="common" name="cpus" value="8th Gen">&nbsp;&nbsp;Intel 8th Gen<br>
             </div>
 
             <div style="height:2px"></div>
@@ -177,33 +149,6 @@
 
             <div style="height:2px"></div>
 
-            <div class="sideleftgraphics">
-                <i class="fa fa-sort-desc" aria-hidden="true" id="gr" onclick="displayDivgraphics()"></i>&nbsp;Graphics
-                <input type="submit" value="clear" class="common" id="btgraphics" onclick="uncheckAllDivgraphics()">
-            </div>
-            <div class="sideleftgraphics1" id="sideleftgraphics1">
-                    <input type="checkbox" class="common" name="graphics" value="YES">&nbsp;&nbsp;Dedicated Graphics<br>
-                    <input type="checkbox" class="common" name="graphics" value="1 GB">&nbsp;&nbsp;1 GB & Above<br>
-                    <input type="checkbox" class="common" name="graphics" value="1.5 GB">&nbsp;&nbsp;1.5 GB & Above<br>
-                    <input type="checkbox" class="common" name="graphics" value="2 GB">&nbsp;&nbsp;2 GB & Above<br>
-            </div>
-
-            <div style="height:2px"></div>
-
-            <div class="sideleftfeatures">
-                <i class="fa fa-sort-desc" aria-hidden="true" id="fe" onclick="displayDivfeatures()"></i>&nbsp;Features
-                <input type="submit" value="clear" class="common" id="btfeatures" onclick="uncheckAllDivfeatures()">
-            </div>
-            <div class="sideleftfeatures1" id="sideleftfeatures1">
-                    <input type="checkbox" class="common" name="features" value="1">&nbsp;&nbsp;Backlit Keyboard<br>
-                    <input type="checkbox" class="common" name="features" value="2">&nbsp;&nbsp;HDMI<br>
-                    <input type="checkbox" class="common" name="features" value="3">&nbsp;&nbsp;Optical Drive<br>
-                    <input type="checkbox" class="common" name="features" value="4">&nbsp;&nbsp;SSD<br>
-                    <input type="checkbox" class="common" name="features" value="5">&nbsp;&nbsp;USB 3.0<br>
-            </div>
-
-            <div style="height:2px"></div>
-
             <div class="sideleftos">
                 <i class="fa fa-sort-desc" aria-hidden="true" id="os" onclick="displayDivos()"></i>&nbsp;OS
                 <input type="submit" value="clear" class="common" id="btos" onclick="uncheckAllDivos()">
@@ -232,19 +177,6 @@
                     <input type="checkbox" class="common" name="bb" value="5 Hours">&nbsp;&nbsp;5 Hours & Above<br>
                     <input type="checkbox" class="common" name="bb" value="7 Hours">&nbsp;&nbsp;7 Hours & Above<br>
                     <input type="checkbox" class="common" name="bb" value="9 Hours">&nbsp;&nbsp;9 Hours & Above<br>
-            </div>
-
-            <div style="height:2px"></div>
-
-            <div class="sideleftw">
-                <i class="fa fa-sort-desc" aria-hidden="true" id="w" onclick="displayDivw()"></i>&nbsp;Weight
-                <input type="submit" value="clear" class="common" id="btw" onclick="uncheckAllDivw()">
-            </div>
-            <div class="sideleftw1" id="sideleftw1">
-                    <input type="checkbox" class="common" name="w" value="1.5 Kg">&nbsp;&nbsp;1.5 Kg & Below<br>
-                    <input type="checkbox" class="common" name="w" value="2.0 Kg">&nbsp;&nbsp;2 Kg & Below<br>
-                    <input type="checkbox" class="common" name="w" value="2.5 Kg">&nbsp;&nbsp;2.5 Kg & Below<br>
-                    <input type="checkbox" class="common" name="w" value="3.0 Kg">&nbsp;&nbsp;3 Kg & Below<br>
             </div>
 
             <div style="height:2px"></div>
